fix in ApplyGetSetTranslation; working on IteratingAnalyzer